Refactored usage of deprecated method